fixed same pieces jumping over each other issue

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
 h2 {
   text-align: center;
  /* transform: rotate(180deg);*/
-  display: none;
+  /*display: none;*/
 }
 
 h1 {
